<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ajude"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.ajudeajoice.Ajude">

    <TextView
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textSize="25dp"
        android:id="@+id/textView11" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/vakinha"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="70dp"
        android:id="@+id/imageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/vaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:id="@+id/textView13"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/eco"
        android:id="@+id/imageButton2"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="37dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_alignRight="@+id/textView13"
        android:layout_alignEnd="@+id/textView13" />


</RelativeLayout>
