<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.ajudeajoice.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322.5dp"
        android:layout_height="225dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ajudeajoice" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/events"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/historia"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:background="@drawable/eventos" />

        <ImageButton
            android:id="@+id/historia"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="141dp"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:background="@drawable/history" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/events"
            android:layout_alignLeft="@+id/events"
            android:layout_alignRight="@+id/events"
            android:layout_alignStart="@+id/events"
            android:layout_below="@+id/events"
            android:layout_marginTop="11dp"
            android:text="@string/eventos"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignEnd="@+id/historia"
            android:layout_alignLeft="@+id/historia"
            android:layout_alignRight="@+id/historia"
            android:layout_alignStart="@+id/historia"
            android:text="@string/title_activity_historia"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/carrinho"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignLeft="@+id/historia"
            android:layout_alignStart="@+id/historia"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="13dp"
            android:background="@drawable/carrinho" />

        <ImageButton
            android:id="@+id/help"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignLeft="@+id/events"
            android:layout_alignStart="@+id/events"
            android:layout_alignTop="@+id/carrinho"
            android:background="@drawable/helps" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignLeft="@+id/carrinho"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignStart="@+id/carrinho"
            android:text="@string/loja"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/help"
            android:layout_alignLeft="@+id/help"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/help"
            android:layout_alignStart="@+id/help"
            android:text="@string/ajude"
            android:textAlignment="center" />
    </RelativeLayout>
</RelativeLayout>
